# hmnextauto

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: release.yml
docs/: API.md  DEVELOP.md  README_NEW.md  RELEASE_NOTES.md
hmnextauto/: __init__.py  _client.py  _notification.py  _ocr.py  _performance_analyzer.py  _performance_watcher.py  _scrollable.py  _uiobject.py  _vision.py  _watcher.py  _xpath.py  driver.py  exception.py  hdc.py  match.py  settings.py  utils.py
tests/: test_appname.py  test_client.py  test_device_info.py  test_driver.py  test_driver_singleton.py  test_element.py  test_match.py  test_notification.py  test_ocr.py  test_performance.py  test_performance_analyzer.py  test_performance_watcher.py  test_scrollable.py  test_settings.py  test_vision.py  test_wait_conditions.py  test_watcher.py  test_xpath_enhanced.py
