[tool.poetry]
name = "hmnextauto"
version = "1.4.1"
description = "UI Automation Framework for Harmony Next"
authors = ["ziguiway <ziguiway@163.com>"]
license = "MIT"
readme = "README.md"
include = ["*/assets/*"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = ">=4.9.0"
opencv-python-headless = "^4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"